--- a/TFC/src/main/resources/templates/coches/lista.html
+++ b/TFC/src/main/resources/templates/coches/lista.html
@@ -39,7 +39,7 @@
         		</div>
         		<div class="row botones">
         			<div class="col-4"><a th:href="@{/coches/comentarios}"><button class="boton2">Comentarios</button></a></div>
-        			<div class="col-4"><a th:href="@{/coches/detalle}"><button class="boton2">Detalle</button></a></div>
+        			<div class="col-4"><a th:href="@{/coches/detalle/{id} (id=${c.id})}"><button class="boton2">Detalle</button></a></div>
         			<div class="col-4"><a><button class="boton2">Comprar</button></a></div>
         		</div>
         	</article>
