--- a/TFC/src/main/resources/templates/admin/adminCoches.html
+++ b/TFC/src/main/resources/templates/admin/adminCoches.html
@@ -59,8 +59,24 @@
                             </tr> 
                         </tbody>
                     </table>
+                    <div class="row justify-content-center paginacion">
+						<nav aria-label="Pagination">
+							<ul class="pagination justify-content-center">
+								<li class="page-item" th:classappend="${prev == 0 ? 'disabled': ''}">
+									<a class="page-link pag" th:href="@{|/admin/coches?page=${prev}|}">Anterior</a>
+								</li>
+								<li class="page-item" th:each="page : ${pages}" th:classappend="${current == page ? 'active': ''}">
+									<a class="page-link" th:href="@{|/admin/coches?page=${page}|}" th:text="${page}"></a>
+								</li>
+								<li class="page-item" th:classappend="${current == last ? 'disabled': ''}">
+									<a class="page-link pag" th:href="@{|/admin/coches?page=${next}|}">Siguiente</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
                 </div>
             </section>
+            
     </main>
     <!-- |footer| 				   	 			  |footer|	  -->
     <footer class="row d-flex" th:insert="fragments/footer"></footer>
