Terminada vista de Productos y añadida paginacion

--- a/TFC/src/main/resources/templates/fragments/header.html
+++ b/TFC/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
     		</a>
     		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
     			<a class="dropdown-item" th:href="@{/coches/lista}">Coches</a>
-    			<a class="dropdown-item" th:href="@{/productos}">Productos</a>
+    			<a class="dropdown-item" th:href="@{/productos/lista}">Productos</a>
     		</div>
 		</li>
     	<li><a th:href="@{/}"><img src="/img/header/dibujo.png" class="logo" alt="logo"></a></li>
