--- a/TFC/src/main/resources/templates/admin/adminUsuarios.html
+++ b/TFC/src/main/resources/templates/admin/adminUsuarios.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/admin.css">
     <link rel="stylesheet" href="/css/Header.css">
+    <link rel="stylesheet" href="/css/paginacion.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -50,6 +51,21 @@
                             </tr> 
                         </tbody>
                     </table>
+                    <div class="row justify-content-center paginacion">
+						<nav aria-label="Pagination">
+							<ul class="pagination justify-content-center">
+								<li class="page-item" th:classappend="${prev == 0 ? 'disabled': ''}">
+									<a class="page-link" th:href="@{|/admin/usuarios?page=${prev}|}">Anterior</a>
+								</li>
+								<li class="page-item numeros" th:each="page : ${pages}" th:classappend="${current == page ? 'active': ''}">
+									<a class="page-link" th:href="@{|/admin/usuarios?page=${page}|}" th:text="${page}"></a>
+								</li>
+								<li class="page-item" th:classappend="${current == last ? 'disabled': ''}">
+									<a class="page-link" th:href="@{|/admin/usuarios?page=${next}|}">Siguiente</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
                 </div>
             </section>
     </main>
