--- a/TFC/src/main/resources/templates/admin/adminEmpleados.html
+++ b/TFC/src/main/resources/templates/admin/adminEmpleados.html
@@ -22,7 +22,7 @@
     <main>
         <section class="row">
                 <!-- |AdminNav| 				 |AdminNav|  -->
-    			<ul class="col-2 d-flex" th:insert="fragments/adminNav"></ul>
+    			<ul class="col-2 d-flex adminNav" th:insert="fragments/adminNav"></ul>
     			<!-- ======================================= -->
                 <div class="col-10">
                     <h1 class="text-center">Empleados</h1>
