--- a/TFC/src/main/resources/static/css/admin.css
+++ b/TFC/src/main/resources/static/css/admin.css
@@ -104,6 +104,47 @@ tbody tr:hover {
 }
 
 
+.boton0 {
+    background: rgb(255, 0, 100);
+    border-radius: 999px;
+    box-shadow: rgb(255, 0, 100) 0 10px 20px -10px;
+    color: #FFFFFF;
+    font-size: 0.75vw;
+    font-weight: 300;
+    line-height: 24px;
+    opacity: 1;
+    padding: 1vw 1vw;
+    border: 0;
+    margin-bottom:0%;
+    margin-top:0%;
+    display: flex;
+    justify-content: center;
+    margin-left: 0.5vw;
+}
 
+.boton0:hover {
+    background: white;
+    border-radius: 999px;
+    box-shadow: white 0 10px 20px -10px;
+    color: #28242c;
+    font-size: 1vw;
+    font-weight: 300;
+    line-height: 24px;
+    opacity: 1;
+    padding: 1vw 1vw;
+    border: 0;
+    margin-bottom:0%;
+    margin-top:0%;
+    display: flex;
+    justify-content: center;
+    margin-left: 0.5vw;
+}
+
+.adminNav  {
+	flex-direction: column;
+	justify-content: center !important;
+	align-content: center !important;
+	text-align: center !important;
+}
 
 
