--- a/TFC/src/main/resources/templates/fragments/adminNav.html
+++ b/TFC/src/main/resources/templates/fragments/adminNav.html
@@ -1,14 +1,16 @@
-	<li class="boton-lista">
-    	<a th:href="@{/admin/coches}">COCHES</a>
-	</li>
-    <li class="boton-lista">
+<nav class="navAdmin">
+	<div class="boton-lista">
+    	<a class="boton-lista"th:href="@{/admin/coches}">COCHES</a>
+	</div>
+    <div class="boton-lista">
     	<a th:href="@{/admin/usuarios}">USUARIOS</a>
-    </li>
-    <li class="boton-lista">
+    </div>
+    <div class="boton-lista">
     	<a th:href="@{/admin/productos}">PRODUCTOS</a>
-    </li>
-    <li class="boton-lista">
+    </div>
+    <div class="boton-lista">
     	<a th:href="@{/admin/empleados}">EMPLEADOS</a>
-	</li>
-    
+	</div>
+</nav>
+	
 	
