Añadida función para ver detalles de los productos destacados

--- a/TFC/src/main/resources/templates/home.html
+++ b/TFC/src/main/resources/templates/home.html
@@ -77,7 +77,7 @@
                                     </div>
                                 </div>
                                 <div class="mx-3 mt-3 mb-2 d-flex justify-content-center">
-                                    <button class="boton0"><small>BUILD & PRICE</small></button>
+                                    <a th:href="@{/coches/detalle/{id} (id=${c.id})}"><button class="boton0" ><small>BUILD & PRICE</small></button></a>
                                 </div>
                             </div>
                         </div>
