--- a/TFC/src/main/resources/static/css/home.css
+++ b/TFC/src/main/resources/static/css/home.css
@@ -19,6 +19,8 @@ section{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    font-weight: 600;
+    color: white;
 }
 
 .info {
