--- a/TFC/src/main/resources/templates/fragments/footer.html
+++ b/TFC/src/main/resources/templates/fragments/footer.html
@@ -1,31 +1,30 @@
     <div class="col-3 d-flex flex-column align-items-center info">
         <h3>Compañía</h3>
         <hr>
-        <span>Sobre nosotros</span>
-        <span>Nuestros servicios</span>
-        <span>Políticas de privacidad</span>
+        <a href="https://www.google.es/">Sobre nosotros</a>
+        <a href="https://www.google.es/">Nuestros servicios</a>
+        <a href="https://www.google.es/">Políticas de privacidad</a>
     </div>
     <div class="col-3 d-flex flex-column align-items-center info">
         <h3>Ayuda</h3>
         <hr>
-        <span>Preguntas frecuentes</span>
-        <span>Compras</span>
-        <span>Devoluciones</span>
-        <span>Estado del pedido</span>
-        <span>Opciones de pago</span>
+        <a href="https://www.google.es/">Preguntas frecuentes</a>
+        <a href="https://www.google.es/">Compras</a>
+        <a href="https://www.google.es/">Devoluciones</a>
+        <a href="https://www.google.es/">Estado del pedido</a>
+        <a href="https://www.google.es/">Opciones de pago</a>
     </div>
     <div class="col-3 d-flex flex-column align-items-center info">
         <h3>Tienda Online</h3>
         <hr>
-        <span>Categoria1</span>
-        <span>Categoria2</span>
-        <span>Categoria3</span>
+        <a th:href="@{/productos/lista}">Coches</a>
+        <a th:href="@{/coches/lista}">Productos</a>
     </div>
     <div class="col-3 d-flex flex-column align-items-center rrss">
         <h3>Síguenos</h3>
         <hr>
-        <span><i class="fab fa-facebook-f"></i></span>
-        <span><i class="fab fa-twitter"></i></span>
-        <span><i class="fab fa-instagram"></i></span>
-        <span><i class="fab fa-linkedin-in"></i></span>
+        <a href="https://www.google.es/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.google.es/"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.google.es/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.google.es/"><i class="fab fa-linkedin-in"></i></a>
     </div>
