Añadido botón para añadir nuevo registro en todas las tablas desde Admin

--- a/TFC/src/main/resources/static/css/admin.css
+++ b/TFC/src/main/resources/static/css/admin.css
@@ -101,6 +101,7 @@ tbody tr:hover {
 
 .paginacion {
 	padding-top: 5%;
+	width: 100%;
 }
 
 
@@ -120,6 +121,7 @@ tbody tr:hover {
     display: flex;
     justify-content: center;
     margin-left: 0.5vw;
+    height: 100%;
 }
 
 .boton0:hover {
