--- a/TFC/src/main/resources/templates/admin/forms/CochesForm.html
+++ b/TFC/src/main/resources/templates/admin/forms/CochesForm.html
@@ -21,7 +21,7 @@
 	<main>
 	<section>
 		<form class="col" th:action="@{/admin/coches/save}" method="post" th:object="${c}">
-			<h1 class="col text-center">Editar Coche</h1>
+			<h1 class="col text-center">Formulario de Coches</h1>
 			<input type="hidden" th:field="*{id}" name="id">
 			<div class="row">
 				<div class="col-6">
