--- a/TFC/src/main/resources/templates/admin/forms/EmpleadoForm.html
+++ b/TFC/src/main/resources/templates/admin/forms/EmpleadoForm.html
@@ -21,7 +21,7 @@
 	<main>
 	<section>
 		<form class="col" th:action="@{/admin/empleados/save}" method="post" th:object="${e}">
-			<h1 class="col text-center">Editar Empleado</h1>
+			<h1 class="col text-center">Formulario de Empleados</h1>
 			<input type="hidden" th:field="*{id}" name="id">
 			<div class="row">
 				<div class="col-6">
