--- a/TFC/src/main/resources/templates/admin/forms/ProductosForm.html
+++ b/TFC/src/main/resources/templates/admin/forms/ProductosForm.html
@@ -21,7 +21,7 @@
 	<main>
 	<section>
 		<form class="col" th:action="@{/admin/productos/save}" method="post" th:object="${p}">
-			<h1 class="col text-center">Editar Producto</h1>
+			<h1 class="col text-center">Formulario de Productos</h1>
 			<input type="hidden" th:field="*{id}" name="id">
 			<div class="row">
 				<div class="col-6">
