Unificado el css de todos los botones en 1 solo archivo

--- a/TFC/src/main/resources/templates/admin/adminProductos.html
+++ b/TFC/src/main/resources/templates/admin/adminProductos.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/c777ed83a5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="/css/botones.css">
     <link rel="stylesheet" href="/css/Header.css">
     <link rel="stylesheet" href="/css/paginacion.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -26,7 +27,7 @@
     			<!-- ======================================= -->
                 <div class="col-10">
                     <div class="row">
-                		<a class="col-2" th:href="@{/admin/productos/añadir}"><button class="boton0">Añadir nuevo</button></a>
+                		<a class="col-2" th:href="@{/admin/productos/añadir}"><button class="botonNuevoRegistro">Añadir nuevo</button></a>
                 		<h1 class="col-8 text-center">PRODUCTOS</h1>
                 	</div>
                     <table>
