--- a/TFC/src/main/resources/templates/admin/adminUsuarios.html
+++ b/TFC/src/main/resources/templates/admin/adminUsuarios.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/admin.css">
     <link rel="stylesheet" href="/css/Header.css">
+    <link rel="stylesheet" href="/css/botones.css">
     <link rel="stylesheet" href="/css/paginacion.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -50,7 +51,7 @@
         						</td>
         						<td>
         						    <form th:action="@{/admin/usuarios/cambiar-estatus/{id}(id=${u.id})}" method="get">
-        						        <button type="submit" class="boton0">Cambiar Estatus</button>
+        						        <button type="submit" class="botonUsuarios">Cambiar Estatus</button>
         						    </form>
         						</td>
                             </tr> 
