--- a/TFC/src/main/resources/templates/logIn.html
+++ b/TFC/src/main/resources/templates/logIn.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/c777ed83a5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/singup&login.css">
+    <link rel="stylesheet" href="/css/botones.css">
     <link rel="stylesheet" href="/css/Header.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
