--- a/TFC/src/main/resources/templates/singUp.html
+++ b/TFC/src/main/resources/templates/singUp.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c777ed83a5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/footer.css">
+	<link rel="stylesheet" href="/css/botones.css">
     <link rel="stylesheet" href="/css/singup&login.css">
     <link rel="stylesheet" href="/css/Header.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
