--- a/TFC/src/main/resources/templates/admin/forms/EmpleadoForm.html
+++ b/TFC/src/main/resources/templates/admin/forms/EmpleadoForm.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/adminForm.css">
     <link rel="stylesheet" href="/css/Header.css">
+    <link rel="stylesheet" href="/css/botones.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -71,7 +72,7 @@
 			</div>
 			
 			<div class="centrado">
-				<button class="boton0"><small>Guardar cambios</small></button>
+				<button class="botonGeneral mt-5 mb-5"><small>Guardar cambios</small></button>
 			</div>
 		</form>
 		</section>
