--- a/TFC/src/main/resources/templates/admin/forms/ProductosForm.html
+++ b/TFC/src/main/resources/templates/admin/forms/ProductosForm.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/c777ed83a5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/adminForm.css">
+    <link rel="stylesheet" href="/css/botones.css">
     <link rel="stylesheet" href="/css/Header.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -54,7 +55,7 @@
 			</div>
 			
 			<div class="centrado">
-				<button class="boton0"><small>Guardar cambios</small></button>
+				<button class="botonGeneral mb-5"><small>Guardar cambios</small></button>
 			</div>
 		</form>
 		</section>
