--- a/TFC/src/main/resources/templates/home.html
+++ b/TFC/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
 	<script src="https://kit.fontawesome.com/c777ed83a5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/botones.css">
     <link rel="stylesheet" href="/css/Header.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -77,7 +78,7 @@
                                     </div>
                                 </div>
                                 <div class="mx-3 mt-3 mb-2 d-flex justify-content-center">
-                                    <a th:href="@{/coches/detalle/{id} (id=${c.id})}"><button class="boton0" ><small>BUILD & PRICE</small></button></a>
+                                    <a th:href="@{/coches/detalle/{id} (id=${c.id})}"><button class="botonGeneral" ><small>BUILD & PRICE</small></button></a>
                                 </div>
                             </div>
                         </div>
