--- a/TFC/src/main/resources/templates/home.html
+++ b/TFC/src/main/resources/templates/home.html
@@ -78,7 +78,7 @@
                                     </div>
                                 </div>
                                 <div class="mx-3 mt-3 mb-2 d-flex justify-content-center">
-                                    <a th:href="@{/coches/detalle/{id} (id=${c.id})}"><button class="botonGeneral" ><small>BUILD & PRICE</small></button></a>
+                                    <a th:href="@{/coches/detalle/{id} (id=${c.id})}"><button class="boton" ><small>BUILD & PRICE</small></button></a>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                     <div class="col-6 text-center">
                         <h2>¿Cuánto vale tu coche?</h2>
                         <p>Tasación rápida y sin compromiso</p>
-                        <button class="boton0">Tasación gratuita</button>
+                        <button class="boton">Tasación gratuita</button>
                     </div>
                     <div class="timg col-6">
                         
@@ -110,7 +110,7 @@
                     <div class="col-6 text-center">
                         <h2>Reprogramaciones</h2>
                         <p>Reprogramación de centralita a medida</p>
-                        <button class="boton0">Contactar</button>
+                        <button class="boton">Contactar</button>
                     </div>
                 </div>
             </div>
