--- a/TFC/src/main/resources/templates/singUp.html
+++ b/TFC/src/main/resources/templates/singUp.html
@@ -39,7 +39,7 @@
                 <input type="password" id="password" name="password" placeholder="Password" th:field="*{password}">
             </div>
             <div class="row divbtn d-flex justify-content-center">
-                <button class="btn2" type="submit" id="submit" name="submit">Registrar</button>
+                <button class="boton mt-5" type="submit" id="submit" name="submit">Registrar</button>
             </div>
         </form>
     </main>
