--- a/TFC/src/main/resources/static/css/botones.css
+++ b/TFC/src/main/resources/static/css/botones.css
@@ -35,24 +35,7 @@
 	color: white;
 }
 
-.botonGeneral {
-    background: rgb(255, 0, 100);
-    border-radius: 999px;
-    box-shadow: rgb(255, 0, 100) 0 10px 20px -10px;
-    color: #FFFFFF;
-    font-size: 0.75vw;
-    font-weight: 300;
-    line-height: 24px;
-    opacity: 1;
-    padding: 1vw 1vw;
-    border: 0;
-    margin-bottom:0%;
-    margin-top:0%;
-    display: flex;
-    justify-content: center;
-    margin-left: 0.5vw;
-    height: 100%;
-}
+
 
 .botonNuevoRegistro{
     background: rgb(255, 0, 100);
@@ -61,7 +44,7 @@
     color: #FFFFFF;
     font-size: 0.75vw;
     font-weight: 300;
-    line-height: 24px;
+    line-height: 2vw;
     opacity: 1;
     padding: 1vw 1vw;
     border: 0;
@@ -80,7 +63,7 @@
     color: #28242c;
     font-size: 1vw;
     font-weight: 300;
-    line-height: 24px;
+    line-height: 2vw;
     opacity: 1;
     padding: 1vw 1vw;
     border: 0;
@@ -98,26 +81,29 @@
 	align-content: center;
 }
 
-.boton2 {
+
+
+a {
+    text-decoration:none !important;
+}
+
+.botonGeneral {
     background: rgb(255, 0, 100);
     border-radius: 999px;
     box-shadow: rgb(255, 0, 100) 0 10px 20px -10px;
     color: #FFFFFF;
-    font-size: 1.5vw;
-    font-weight: 700;
-    line-height: 24px;
+    font-size: 0.75vw;
+    font-weight: 300;
+    line-height: 2vw;
     opacity: 1;
-    padding: 1vw 2vw;
+    padding: 1vw 1vw;
     border: 0;
-    margin-bottom:7.5%;
-    margin-top:10%;
+    margin-bottom:0%;
+    margin-top:0%;
     display: flex;
     justify-content: center;
-    margin: 2vw;
-}
-
-a {
-    text-decoration:none !important;
+    margin-left: 0.5vw;
+    height: 100%;
 }
 
 .boton {
@@ -134,12 +120,6 @@ a {
     margin-bottom:7.5%;
 }
 
-.compra {
-	display: flex;
-	justify-content: center;
-	margin-top: 5%;
-}
-
 .boton2 {
     background: rgb(255, 0, 100);
     border-radius: 999px;
@@ -147,7 +127,7 @@ a {
     color: #FFFFFF;
     font-size: 1.5vw;
     font-weight: 700;
-    line-height: 24px;
+    line-height: 2vw;
     opacity: 1;
     padding: 1vw 2vw;
     border: 0;
@@ -156,6 +136,12 @@ a {
     display: flex;
     justify-content: center;
     margin: 2vw;
+}
+
+.compra {
+	display: flex;
+	justify-content: center;
+	margin-top: 5%;
 }
 
 .botonNav {
@@ -173,23 +159,7 @@ a {
 }	
 
 
-.btn2 {
-    background-color: rgb(255, 0, 100);
-    border-radius: 999px;
-    box-shadow: rgb(255, 0, 100) 0 10px 20px -10px;
-    color: #FFFFFF;
-    font-size: 1.5vw;
-    font-weight: 700;
-    line-height: 24px;
-    opacity: 1;
-    padding: 1vw 2vw;
-    border: 0;
-    margin-bottom:7.5%;
-    margin-top:10%;
-    display: flex;
-    justify-content: center;
-    margin: 2vw;
-}
+
 
 .botonUsuarios {
     background: rgb(255, 0, 100);
@@ -198,7 +168,7 @@ a {
     color: #FFFFFF;
     font-size: 0.75vw;
     font-weight: 300;
-    line-height: 24px;
+    line-height: 1vw;
     opacity: 1;
     padding: 1vw 1vw;
     border: 0;
@@ -207,7 +177,7 @@ a {
     display: flex;
     justify-content: center;
     margin-left: 0.5vw;
-    height: 100%;
+
 }
 
 
