--- a/TFC/src/main/resources/templates/logIn.html
+++ b/TFC/src/main/resources/templates/logIn.html
@@ -29,7 +29,7 @@
                 <input type="password" id="password" name="password" placeholder="Password">
             </div>
             <div class="row divbtn d-flex justify-content-center">
-                <button class="btn2" type="submit" id="submit" name="submit">Log In</button>
+                <button class="boton mt-5" type="submit" id="submit" name="submit">Log In</button>
             </div>
             <div th:if="${errorMessage}" class="error-message">
         		<p th:text="${errorMessage}"></p>
